--- a/templates/base.html
+++ b/templates/base.html
@@ -106,6 +106,11 @@
                   <i class="bi bi-diagram-3"></i><span>Asignaciones</span>
                 </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('anos_lectivos.listar_anos') }}">
+                  <i class="bi bi-calendar3"></i><span>Años Lectivos</span>
+                </a>
+              </li>
             </ul>
           </div>
           {% elif current_role == 2 or current_role == 3 %}
